# CoffeeShader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES  NOTES   conanfile.txt  notes.txt
lib/: CMakeLists.txt  imgui.cmake  osdialog.cmake
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: blue.glsl.frag  default.glsl.frag  default.glsl.vert  default.vert.glsl  diffuse.glsl.frag  diffuse.glsl.vert  rainbow.glsl.vert  red.glsl.vert
src/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  Constants.hpp  Context.cpp  Context.hpp  ContextSystem.cpp  ContextSystem.hpp  DefaultShaders.hpp  FileWatcher.cpp  FileWatcher.hpp  Gui.cpp  Gui.hpp  InputSystem.cpp  InputSystem.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  ShaderSystem.cpp  ShaderSystem.hpp  TrackballSystem.cpp  TrackballSystem.hpp  Window.cpp  Window.hpp  main.cpp
src/Core/: Assert.hpp  Containers.hpp  File.cpp  File.hpp  GL.hpp  Handle.hpp  Log.cpp  Math.hpp
src/Data/: Canvas.hpp  CanvasData.hpp  Context.hpp  DefaultGeometry.hpp  Shapes.hpp
src/Utils/: Assert.hpp  Containers.hpp  File.cpp  File.hpp  Handle.hpp  Log.cpp  Log.hpp  Math.hpp  Matrix.hpp
